// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`with-pragma.vue - {"requirePragma":true} format 1`] = `
====================================options=====================================
parsers: ["vue"]
printWidth: 80
requirePragma: true
                                                                                | printWidth
=====================================input======================================
<!-- @prettier -->
<template>
  <div>This will be pre-compiled</div>
</template>
<script>
const    x      = 1;
</script>
<style src="./my-component.css"></style>

=====================================output=====================================
<!-- @prettier -->
<template>
  <div>This will be pre-compiled</div>
</template>
<script>
const x = 1;
</script>
<style src="./my-component.css"></style>

================================================================================
`;

exports[`without-pragma.vue - {"requirePragma":true} format 1`] = `
====================================options=====================================
parsers: ["vue"]
printWidth: 80
requirePragma: true
                                                                                | printWidth
=====================================input======================================
<template>
  <div>This will be pre-compiled</div>
</template>
<script>
const    x      = 1;
</script>
<style src="./my-component.css"></style>

=====================================output=====================================
<template>
  <div>This will be pre-compiled</div>
</template>
<script>
const    x      = 1;
</script>
<style src="./my-component.css"></style>

================================================================================
`;
